--- a/css/style-account.css
+++ b/css/style-account.css
@@ -540,6 +540,7 @@ body {
     display: flex;
     background-color: #191C1F;
     padding-bottom: 60px;
+    height: 100vh;
 }
 
 .bottom1 {
@@ -639,3 +640,74 @@ body {
     opacity: 0.9;
     transition: 0.7s;
 }
+
+@media screen and (max-width: 768px) {
+.header-line2 {
+flex-direction: column;
+align-items: flex-start;
+padding: 10px;
+}
+
+.header-line1-p1 {
+    margin-left: 0;
+    margin-top: 10px;
+    font-size: 20px;
+}
+
+.header-line1-input {
+    width: 90%;
+    margin: 10px 0;
+}
+
+.header-line1-btn1 {
+    width: 90%;
+    margin: 10px 0;
+}
+
+.header-line1-img3,
+.header-line1-img4,
+.header-line1-img5 {
+    margin: 10px 0;
+}
+
+.header-line3 {
+    flex-direction: column;
+    align-items: center;
+}
+
+.header-line3-select {
+    width: 90%;
+    margin: 10px 0;
+}
+
+.header-line3-img4 {
+    margin-top: 10px;
+}
+}
+
+@media screen and (max-width: 480px) {
+.header-line1-input {
+width: 80%;
+font-size: 12px;
+}
+
+.header-line1-btn1 {
+    width: 80%;
+}
+
+.header-line3-img4 {
+    display: none;
+}
+
+.header-line1-img3,
+.header-line1-img4,
+.header-line1-img5 {
+    display: none;
+}
+}
+
+
+
+
+    
+    
