--- a/css/style-basket.css
+++ b/css/style-basket.css
@@ -675,6 +675,14 @@ body {
         display: flex;
     }
 
+    .bottom2 {
+        margin-left: 70px;
+    }
+
+    .bottom1 {
+        margin-left: 250px;
+    }
+
     .cart-right-1 {
         margin-left: 200px;
         margin-top: 20px;
@@ -706,14 +714,6 @@ body {
 }
 
 @media (max-width: 1300px) {
-    .header-line3-a1 {
-        font-size: 12px;
-    }
-
-    .header-line3-a4 {
-        font-size: 12px;
-    }
-
     .header-line1-img3 {
         margin-left: 70px;
     }
@@ -721,13 +721,9 @@ body {
     .header-line1-img4 {
         margin-left: 20px;
     }
-
-    .bottom2 {
-        margin-left: 70px;
-    }
 }
 
-@media (max-width: 1224px) {
+@media (max-width: 1274px) {
     .header-line3-img4 {
         margin-left: 30px;
     }
@@ -746,10 +742,6 @@ body {
 
     .bottom2 {
         margin-left: 60px;
-    }
-
-    .bottom1 {
-        margin-left: 250px;
     }
 }
 
@@ -770,12 +762,39 @@ body {
         margin-left: 150px;
     }
 
+    .header-line3-a1 {
+        font-size: 12px;
+    }
+
+    .header-line3-a4 {
+        font-size: 12px;
+    }
+
     .cart-right-1 {
         margin-left: 150px;
     }
 
     .bottom1 {
         margin-left: 150px;
+    }
+
+    .bottom2-p2 {
+        font-size: 12px;
+    }
+
+    .bottom1-p3 {
+        font-size: 12px;
+    }
+    
+    .bottom2-p7 {
+        font-size: 12px;
+    }
+    .header-line3-a1 {
+        font-size: 12px;
+    }
+
+    .header-line3-a4 {
+        font-size: 12px;
     }
 }
 
@@ -880,14 +899,6 @@ body {
         margin-left: 80px;
     }
 
-    .bottom2-p2 {
-        font-size: 12px;
-    }
-
-    .bottom1-p3 {
-        font-size: 14px;
-    }
-
     .bottom1-p1 {
         font-size: 20px;
     }
@@ -958,7 +969,29 @@ body {
     }
 }
 
-@media (max-width: 832px) {
+@media (max-width: 850px) {
+    .header-line2 {
+        padding-left: 55px;
+    }
+
+    .header-line3-select {
+        margin: 10px 10px 10px 55px;
+    }
+    
+    .cart-left {
+        margin-left: 55px;
+    }
+
+    .cart-right-1 {
+        margin-left: 55px;
+    }
+
+    .bottom1 {
+        margin-left: 55px;
+    }
+}
+
+@media (max-width: 827px) {
     .header-line3-a4 {
         display: none;
     }
@@ -1088,4 +1121,8 @@ body {
         font-size: 10px;
         padding: 10px 20px 10px 30px;
     }
-}
+
+    .bottom2 {
+        margin-left: 34px;
+    }
+} 
