--- a/css/style-zakaz.css
+++ b/css/style-zakaz.css
@@ -54,6 +54,7 @@ body {
     padding-left: 200px;
     padding-top: 15px;
     padding-bottom: 15px;
+    min-width: 850px;
 }
 
 .header-line1-p1 {
@@ -111,6 +112,7 @@ body {
     background-color: #D5F0D3;
     display: flex;
     align-items: center;
+    min-width: 850px;
 }
 
 .header-line3-option {
@@ -348,6 +350,9 @@ body {
     display: flex;
     background-color: #191C1F;
     padding-bottom: 60px;
+    min-height: 400px;
+    max-height: 600px;
+    min-width: 850px;
 }
 
 .bottom1 {
