--- a/css/style-head.css
+++ b/css/style-head.css
@@ -717,9 +717,10 @@ body {
 
 .tovary {
     display: flex;
+    margin-left: 90px;
 }
 .tovar {
-    margin-left: 160px;
+    margin-left: 70px;
     margin-top: 40px;
 }
 
@@ -769,6 +770,7 @@ body {
     color: #000;
     font-weight: 600;
     width: 180px;
+    min-height: 30px;
     font-size: 12px;
     line-height: 15px;
     display: -webkit-box;
@@ -776,11 +778,6 @@ body {
     text-overflow: ellipsis;
     overflow: hidden;
     -webkit-box-orient: vertical;
-}
-
-.tovar-1 {
-    margin-left: 70px;
-    margin-top: 40px;
 }
 
 .heart-icon {
