--- a/css/style-account-vhod.css
+++ b/css/style-account-vhod.css
@@ -665,7 +665,19 @@ body {
     }
 }
 
-@media (max-width: 827px) {
+@media (max-width: 820px) {
+    .header-line3-a4 {
+        display: none;
+    }
+
+    .header-line3-img4 {
+        display: none;
+    }
+    .header-line1-input {
+        width: 240px;
+    }
+}
+@media (max-width: 770px) {
     .header-line3-a4 {
         display: none;
     }
