--- a/css/style-account.css
+++ b/css/style-account.css
@@ -646,6 +646,458 @@ body {
 }
 
 
+@media (max-width: 1440px) {
+    .settings-left-1-input {
+        width: 270px;
+    }
+    .settings-right-1-input {
+        width: 270px;
+    }
+    .settings-right-21-input {
+        width: 150px;
+    }
+    .settings-right-22-input {
+        width: 105px;
+    }
+    .settings {
+        width: 830px;
+    }
+}
+
+@media (max-width: 1365px)  {
+    .settings-left-1-input {
+        width: 240px;
+    }
+    .settings-right-1-input {
+        width: 240px;
+    }
+    .settings-right-21-input {
+        width: 130px;
+    }
+    .settings-right-22-input {
+        width: 95px;
+    }
+    .settings {
+        width: 770px;
+    }
+}
+
+@media (max-width: 1325px) {
+    .bottom2 {
+        margin-left: 70px;
+    }
+
+    .bottom1 {
+        margin-left: 250px;
+    }
+
+    .account {
+        margin-left: 480px;
+    }
+}
+
+@media (max-width: 1300px) {
+    .header-line1-img3 {
+        margin-left: 70px;
+    }
+
+    .header-line1-img4 {
+        margin-left: 20px;
+    }
+
+    .header-line3-img4 {
+        margin-left: 30px;
+    }
+    .settings {
+        width: 700px;
+    }
+    .settings-img-img {
+        height: 130px;
+        width: 130px;
+    }
+}
+
+@media (max-width: 1274px) {
+    .header-line1-p1 {
+        font-size: 18px;
+    }
+
+    .header-line1-input {
+        width: 400px;
+    }
+
+    .header-line1-img3 {
+        margin-left: 40px;
+    }
+
+    .bottom2 {
+        margin-left: 60px;
+    }
+}
+
+@media (max-width: 1244px) {
+    .settings {
+        width: 640px;
+    }
+    .settings-left-1-input {
+        width: 200px;
+    }
+    .settings-right-1-input {
+        width: 200px;
+    }
+    .settings-right-21-input {
+        width: 100px;
+    }
+    .settings-right-22-input {
+        width: 85px;
+    }
+}
+
+@media (max-width: 1190px) {
+    .settings-img-img {
+        height: 110px;
+        width: 110px;
+    }
+    .settings {
+        width: 600px;
+    }
+    .settings-left-1-input {
+        width: 180px;
+    }
+    .settings-right-1-input {
+        width: 180px;
+    }
+    .settings-right-21-input {
+        width: 90px;
+    }
+    .settings-right-22-input {
+        width: 75px;
+    }
+}
+
+@media (max-width: 1124px) {
+    .settings-img-img {
+        height: 90px;
+        width: 90px;
+    }
+    .settings {
+        width: 540px;
+    }
+    .settings-left-1-input {
+        width: 170px;
+    }
+    .settings-right-1-input {
+        width: 170px;
+    }
+    .settings-right-21-input {
+        width: 85px;
+    }
+    .settings-right-22-input {
+        width: 70px;
+    }
+}
+
+@media (max-width: 1080px) {
+    .panel {
+        margin-left: 150px;
+    }
+    .adress {
+        margin-left: 450px;
+    }
+    .parol {
+        margin-left: 450px;
+    }
+    .header-line1-input {
+        width: 300px;
+    }
+
+    .header-line2 {
+        padding-left: 150px;
+    }
+
+    .header-line3-select {
+        margin: 10px 10px 10px 150px;
+    }
+    
+    .header-line3-a1 {
+        font-size: 12px;
+    }
+
+    .header-line3-a4 {
+        font-size: 12px;
+    }
+
+    .bottom1 {
+        margin-left: 150px;
+    }
+
+    .bottom2-p2 {
+        font-size: 12px;
+    }
+
+    .bottom1-p3 {
+        font-size: 12px;
+    }
+    
+    .bottom2-p7 {
+        font-size: 12px;
+    }
+    .header-line3-a1 {
+        font-size: 12px;
+    }
+
+    .header-line3-a4 {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 1030px) {
+    .panel {
+        width: 210px;
+    }
+    .adress {
+        margin-left: 410px;
+    }
+    .parol {
+        margin-left: 410px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .header-line1-input {
+        width: 300px;
+    }
+    .settings {
+        margin-left: 40px;
+    }
+    .settings-p {
+        margin-left: 40px;
+    }
+
+    .header-line2 {
+        padding-left: 100px;
+    }
+    .adress {
+        margin-left: 350px;
+    }
+    .parol {
+        margin-left: 350px;
+    }
+    .panel {
+        margin-left: 100px;
+    }
+
+    .header-line3-select {
+        margin: 10px 10px 10px 100px;
+    }
+    
+    .bottom1 {
+        margin-left: 100px;
+    }
+}
+
+@media (max-width: 960px) {
+    .settings-img-img {
+        height: 80px;
+        width: 80px;
+    }
+    .settings {
+        width: 510px;
+    }
+    .settings-left-1-input {
+        width: 170px;
+    }
+    .settings-right-1-input {
+        width: 170px;
+    }
+    .settings-right-21-input {
+        width: 85px;
+    }
+    .settings-right-22-input {
+        width: 70px;
+    }
+}
+
+@media (max-width: 890px) {
+    .header-line1-input {
+        width: 280px;
+    }
+    .adress {
+        margin-left: 315px;
+    }
+    .parol {
+        margin-left: 315px;
+    }
+    .panel {
+        margin-left: 80px;
+    }
+    .settings {
+        margin-left: 25px;
+    }
+    .settings-p {
+        margin-left: 25px;
+    }
+
+    .header-line2 {
+        padding-left: 80px;
+    }
+
+    .header-line3-select {
+        margin: 10px 10px 10px 80px;
+    }
+    
+    .bottom1 {
+        margin-left: 80px;
+    }
+
+    .bottom1-p1 {
+        font-size: 20px;
+    }
+
+    .bottom1-img1 {
+        height: 60px;
+        width: 40px;
+    }
+
+    .bottom2 {
+        margin-left: 45px;
+    }
+
+    .account {
+        margin-left: 230px;
+    }
+}
+
+@media (max-width: 850px) {
+    .header-line2 {
+        padding-left: 55px;
+    }
+
+    .header-line3-select {
+        margin: 10px 10px 10px 55px;
+    }
+    
+    .bottom1 {
+        margin-left: 55px;
+    }
+
+    .adress {
+        margin-left: 290px;
+    }
+    .parol {
+        margin-left: 290px;
+    }
+    .panel {
+        margin-left: 55px;
+    }
+    .settings-left-1-input {
+        width: 155px;
+    }
+    .settings-right-1-input {
+        width: 155px;
+    }
+    .settings-right-21-input {
+        width: 75px;
+    }
+    .settings-right-22-input {
+        width: 65px;
+    }
+    .settings {
+        width: 480px;
+    }
+}
+
+@media (max-width: 820px) {
+    .header-line3-a4 {
+        display: none;
+    }
+
+    .header-line3-img4 {
+        display: none;
+    }
+    .header-line1-input {
+        width: 240px;
+    }
+    .panel-1-p {
+        font-size: 12px;
+    }
+    .panel-2-p {
+        font-size: 12px;
+    }
+    .panel {
+        height: 400px;
+        width: 180px;
+    }
+    .panel-1-img {
+        padding: 10px 10px 10px 15px;
+    }
+    .panel-2-img {
+        padding: 10px 10px 10px 15px;
+    }
+    .adress {
+        margin-left: 260px;
+    }
+    .parol {
+        margin-left: 260px;
+    }
+}
+
+@media (max-width: 770px) {
+    .header-line3-img4 {
+        display: none;
+    }
+
+    .header-line1-input {
+        width: 210px;
+        margin-left: 30px;
+    }
+
+    .header-line2 {
+        padding-left: 50px;
+    }
+
+    .header-line3-select {
+        margin: 10px 10px 10px 50px;
+    }
+
+    .bottom1 {
+        margin-left: 50px;
+    }
+
+    .bottom2 {
+        margin-left: 34px;
+    }
+    .settings-img {
+        display: none;
+    }
+    .settings {
+        width: 400px;
+    }
+    .settings-left-1 {
+        margin-left: 20px;
+    }
+    .settings-left-1-btn {
+        margin-left: 20px;
+    }
+    .settings-left-1-input {
+        width: 170px;
+    }
+    .settings-right-1-input {
+        width: 170px;
+    }
+    .settings-right-21-input {
+        width: 80px;
+    }
+    .settings-right-22-input {
+        width: 75px;
+    }
+    .adress {
+        margin-left: 115px;
+    }
+    .parol {
+        margin-left: 115px;
+    }
+} 
 
 
 
