--- a/css/style-basket.css
+++ b/css/style-basket.css
@@ -38,6 +38,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: 400;}
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    height: 100vh;
 }
 
 .option {
@@ -100,6 +101,12 @@ body {
     margin-left: 30px;
 }
 
+.header-line1-img5 {
+    width: 28px;
+    height: 28px;
+    margin-left: 30px;
+}
+
 .header-line3 {
     background-color: #D5F0D3;
     display: flex;
@@ -107,30 +114,63 @@ body {
     min-width: 850px;
 }
 
-.header-line3-option {
-    background-color: #f2f4f5;
-    margin: 10px 15px;
+.category {
+    display: none;
+    position: absolute;
+    margin-left: 200px;
+    width: 170px;
+    background-color: #fff;
+    border: 1px solid #E4E7E9;
+    border-radius: 3px;
 }
 
-.header-line3-select {
-    margin: 10px 10px 10px 200px;
+.category-p {
+    padding: 10px 0px 10px 15px;
+    color: #5F6C72;
+}
+.category-p:hover {
+    background-color: #F2F4F5;
+    color: #191C1F;
+    cursor: pointer;
+}
+.header-line3-new-img {
+    background-color: #F2F4F5;
+    margin-left: 16px;
+    margin-top: 6px;
+}
+.header-line3-new {
+    display: flex;
+    width: 148px;
+    height: 38px;
+    margin: 10px 40px 10px 200px;
     padding: 10px;
     background-color: #F2F4F5;
     border-radius: 2px;
 }
 
-.header-line3-select:hover {
-    cursor: pointer;
-}
-
 .header-line3-a1 {
     color: #5f6c72;
     margin-left: 5px;
+    transition: 0.3s;
+}
+
+.header-line3-a2 {
+    color: #5f6c72;
+    margin-left: 7px;
+    transition: 0.3s;
+}
+
+.header-line3-a3 {
+    color: #5f6c72;
+    margin-left: 5px;
+    transition: 0.3s;
 }
 
 .header-line3-a4 {
     color: #5f6c72;
+    font-size: 16px;
     margin-left: 5px;
+    transition: 0.3s;
 }
 
 .header-line3-img1 {
@@ -169,7 +209,6 @@ body {
     color: #2DB224;
     transition: 0.3s;
 }
-
 .cart {
     display: flex;
 }
