--- a/css/style-head.css
+++ b/css/style-head.css
@@ -798,56 +798,79 @@ body {
     -webkit-box-orient: vertical;
 }
 
+.cart {
+    margin-top: 20px;
+    display: flex;
+
+}
+.cart-btn {
+    display: flex;
+    align-items: center;
+    width: 130px;
+    height: 35px;
+    background-color: #87d582;
+    padding: 5px 2px;
+    border-radius: 6px;
+}
+
+
+.cart-btn:hover {
+    background-color: #4dc345;
+    transition: 0.5s;
+}
+
+.cart-btn1:hover {
+    background-color: #4dc345;
+    transition: 0.5s;
+}
+
+.cart-img {
+    height: 25px;
+    width: 25px;
+    margin-left: 10px;
+}
+
+.cart-p {
+    color: #fff;
+    font-weight: 600;
+    font-size: 14px;
+    margin-left: 5px;
+}
+
+.heart-btn1 {
+    background-color: #fff;
+    margin-left: 10px;
+}
 .heart-icon {
-    position: absolute;
-    top: 557px;
-    margin-left: 140px;
+    background-color: #fff;
     height: 30px;
     width: 30px;
 }
-
-.heart-icon1 {
-    position: absolute;
-    top: 925px;
-    margin-left: 140px;
-    height: 30px;
-    width: 30px;
-}
-
-.heart-icon2 {
-    position: absolute;
-    top: 1622px;
-    margin-left: 140px;
-    height: 30px;
-    width: 30px;
-} 
-
-.heart-icon3 {
-    position: absolute;
-    top: 1990px;
-    margin-left: 140px;
-    height: 30px;
-    width: 30px;
-} 
 
 .quantity-block {
-    display: none;
     align-items: center;
+    display: flex;
     width: 130px;
     background-color: #87d582;
     border-radius: 6px;
     height: 35px;
-    justify-content: space-around;
+    justify-content: center;
 }
 
+.quantity1 {
+    display: none;
+    margin-top: 20px;
+}
 .quantity {
+    padding-left: 30px;
+    padding-right: 30px;
     color: #fff;
 }
-
 .kolvo-img1 {
     width: 20px;
     height: 20px;
     background-color: #87d582;
+    color: #87d582;
 }
 
 .kolvo-img2 {
